--- a/src/app/pages/colheitadosaber/colheitadosaber.component.html
+++ b/src/app/pages/colheitadosaber/colheitadosaber.component.html
@@ -1,7 +1,8 @@
- <!-- BOTÃO VOLTAR -->
+<div class="bg-container">
+<!-- BOTÃO VOLTAR -->
  <header class="cabecalho">
-    <a href="menu.html">
-      <img src="../../../../public/img/esquerda.svg" class="botao-voltar">
+    <a routerLink="/menu">
+      <img src="/img/esquerda.svg" class="botao-voltar">
     </a>
   </header>
 
@@ -9,14 +10,14 @@
   <main class="conteudo-principal">
 
     <!-- LOGO -->
-    <img src="../../../../public/img/logo.svg" id="logo">
+    <img src="/img/logo.svg" id="logo">
 
     <div class="container-cards">
       
 
       <!-- CARD 1 - DISPONÍVEL -->
       <a href="https://youtu.be/qdGWhbVb-90?si=KdJ10Ud6Dcod48b7" class="card-link">
-        <img src="../../../../public/img//capa/EP1.png" class="card-img">
+        <img src="/img/capa/EP1.png" class="card-img">
       </a>
 
       <!-- CARD 2 - INDISPONÍVEL -->
@@ -30,3 +31,4 @@
   <footer class="rodape">
     © Corn Coincs — Todos os direitos reservados.
   </footer>
+</div>
