--- a/src/app/pages/login/login.component.html
+++ b/src/app/pages/login/login.component.html
@@ -1,3 +1,4 @@
+<div class="bg-container">
 <div class="main-container">
     <div class="left-panel">
         <img src="img/logo.svg" alt="Corn Coincs Logo" class="logo">
@@ -83,4 +84,5 @@
 
         </div>
     </div>
+</div>
 </div>
