--- a/src/app/pages/missoes/missoes.component.html
+++ b/src/app/pages/missoes/missoes.component.html
@@ -1,6 +1,7 @@
+<div class="bg-container">
 <header class="cabecalho">
   <a routerLink="/menu" class="botao-voltar">
-    <img src="img/esquerda.svg" alt="Voltar para o menu">
+    <img src="/img/esquerda.svg" alt="Voltar para o menu">
   </a>
 
   <button class="botao-som" (click)="toggleSound(!isSoundOn)">
@@ -10,11 +11,11 @@
 
 <main class="conteudo-principal">
   <div class="painel">
-    <img src="img/logo.svg" id="logo" alt="Logo Corn Coincs">
+    <img src="/img/logo.svg" id="logo" alt="Logo Corn Coincs">
    
     <div class="container-apps">
       <a id="MG" routerLink="/memorygame-login" class="card-app">
-        Memory Game
+
       </a>
       <a href="#" class="card-app">
         App 2
@@ -34,3 +35,4 @@
   <source src="sound/Music_fx_faa_uma_musica_instrumental_para_um.wav" type="audio/wav">
   Seu navegador não suporta o elemento de áudio.
 </audio>
+</div>
