--- a/src/app/pages/esqueceusenha/esqueceusenha.component.css
+++ b/src/app/pages/esqueceusenha/esqueceusenha.component.css
@@ -8,13 +8,22 @@
     box-sizing: border-box;
 }
 
+.bg-container {
+    width: 100%;
+    height: 100vh;
+    background-image: url('/img/lock-wallpaper.png');
+    background-size: cover;
+    background-position: center;
+    background-attachment: fixed;
+}
+
 body,
 html {
     margin: 0;
     padding: 0;
     height: 100%;
     font-family: Arial, sans-serif;
-    background-image: url(../img/lock-wallpaper.png);
+    background-image: url("/public/img/lock-wallpaper.png");
     background-size: cover;
     background-position: center;
     background-attachment: fixed;
