--- a/src/app/pages/login/login.component.css
+++ b/src/app/pages/login/login.component.css
@@ -1,3 +1,12 @@
+.bg-container {
+    width: 100%;
+    height: 100vh;
+    background-image: url('/img/background1.jpeg');
+    background-size: cover;
+    background-position: center;
+    background-attachment: fixed;
+}
+
 
 /* Botão de voltar no canto */
 .back-button {
@@ -50,6 +59,7 @@
     align-items: center;
     justify-content: flex-start;
     padding-left: 5%;
+    font-family: "Montserrat", sans-serif;
 }
 
 /* O container branco do formulário */
