--- a/src/app/pages/memorygame-login/memorygame-login.component.html
+++ b/src/app/pages/memorygame-login/memorygame-login.component.html
@@ -1,9 +1,10 @@
+<div class="bg-container">
 <header class="cabecalho">
-    <a href="../missoes/" class="botao-voltar">
-      <img src="../../../../public/img/esquerda.svg" alt="">
+    <a routerLink="/missoes" class="botao-voltar">
+      <img src="/img/esquerda.svg" alt="">
     </a>
 
-    <img src="../../../../public/img/logo.svg" class="logo">
+    <img src="/img/logo.svg" class="logo">
 
     <button class="botao-som" id="botaoSom">
       <i class="fa-solid fa-volume-high"></i>
@@ -17,14 +18,16 @@
       <h1 class="title">Jogo da Memória</h1> 
       <br>
     
-      <a href="../memorygame/memorygame.component.html"  class="btn-register">Jogar</a>
+      <a routerLink="/memorygame"  class="btn-register">Jogar</a>
     </form>
   </main>
 
   <audio id="musicaFundo" loop autoplay>
-    <source src="../sound/Music_fx_relaxing_ukulele_chill_steven_univer.wav" type="audio/wav">
+    <source src="/sound/Music_fx_relaxing_ukulele_chill_steven_univer.wav" type="audio/wav">
   </audio>
 
   <footer>
     © Corn Coincs — Todos os direitos reservados.
   </footer>
+     
+</div>
