--- a/src/app/pages/memorygame/memorygame.component.html
+++ b/src/app/pages/memorygame/memorygame.component.html
@@ -1,23 +1,25 @@
-<header class="cabecalho">
-    <a href="../jogos/MemoryGame-login.html" class="botao-voltar">
-      <img src="../img/esquerda.svg" alt="">
+<div class="bg-container">
+  <header class="cabecalho">
+    <a routerLink="/memorygame-login" class="botao-voltar">
+      <img src="/img/esquerda.svg" alt="">
     </a>
 
-    <img src="../img/logo.svg" class="logo">
+    <img src="/img/logo.svg" class="logo">
 
-    <button class="botao-som" id="botaoSom">
+    <button #botaoSom class="botao-som">
       <i class="fa-solid fa-volume-high"></i>
     </button>
   </header>
 
   <main>
-    <div class="grid"></div>
+    <div #grid class="grid"></div>
   </main>
 
   <footer>
     © Corn Coincs — Todos os direitos reservados.
   </footer>
 
-  <audio id="musicaFundo" loop autoplay>
-    <source src="../sound/Music_fx_relaxing_ukulele_chill_steven_univer.wav" type="audio/wav">
+  <audio #musicaFundo loop autoplay>
+    <source src="/sound/Music_fx_relaxing_ukulele_chill_steven_univer.wav" type="audio/wav">
   </audio>
+</div>
