--- a/src/styles.css
+++ b/src/styles.css
@@ -1,9 +1,8 @@
 /* You can add global styles to this file, and also import other style files */
 @import url('https://fonts.googleapis.com/css2?family=Mochiy+Pop+P+One&display=swap');
-
+@import url('https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100..900;1,100..900&display=swap');
 
 /* Reset básico e fontes */
-
 * {
     box-sizing: border-box;
 }
@@ -12,11 +11,5 @@ body,
 html {
     margin: 0;
     padding: 0;
-    height: 100%;
-    font-family: Arial, sans-serif;
-    background-image: url('../public/img/background1.jpeg');
-    background-size: cover;
-    background-position: center;
-    background-attachment: fixed;
+    min-height: 100%;
 }
-
